fixed a flickering problem with the popover Poster

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -98,6 +98,9 @@ html {
 .hover-img{
     width: 100%;
 }
+.popover {
+    pointer-events: none;
+}
 
 #div_search {
     display: table;
